--- a/src/main/webapp/resources/less/header.less
+++ b/src/main/webapp/resources/less/header.less
@@ -1,6 +1,6 @@
 .navbar {
   border-top: 4px solid #6db33f;
-  background-color: #34302d;
+  background-color:lightgreen; /*cambiar color cabecera #34302d a lightgreen*/
   margin-bottom: 0px;
   border-bottom: 0;
   border-left: 0;
