change the background color of the table header to light grey

--- a/src/main/webapp/resources/less/petclinic.less
+++ b/src/main/webapp/resources/less/petclinic.less
@@ -51,7 +51,7 @@
 @table-border-color:                      @spring-brown;
 
 .table > thead > tr > th {
-  background-color: lighten(@spring-brown, 3%);
+  background-color:  @spring-light-grey;
   color: @spring-light-grey;
 }
 
