--- a/src/main/webapp/resources/less/header.less
+++ b/src/main/webapp/resources/less/header.less
@@ -1,6 +1,6 @@
 .navbar {
-  border-top: 4px solid #6db33f;
-  background-color:lightgreen; /*cambiar color cabecera #34302d a lightgreen*/
+  border-top: 4px solid #474240;
+  background-color: #C5B9B2; /*cambiar color cabecera #34302d a lightgreen*/
   margin-bottom: 0px;
   border-bottom: 0;
   border-left: 0;
@@ -56,7 +56,7 @@
 }
 .navbar li:hover > a {
   color: #eeeeee;
-  background-color: #6db33f;
+  background-color: #AC9588;
 }
 
 .navbar-toggle {
