--- a/src/main/webapp/resources/less/petclinic.less
+++ b/src/main/webapp/resources/less/petclinic.less
@@ -22,16 +22,16 @@
 
 @body-bg:                           @spring-light-grey;
 @text-color:                        @spring-brown;
-@link-color:                        @spring-dark-green;
-@link-hover-color:                  @spring-dark-green;
+@link-color:                        #AC9588;
+@link-hover-color:                  #201D10;
 
 @navbar-default-link-color:         @spring-light-grey;
 @navbar-default-link-active-color:  @spring-light-grey;
 @navbar-default-link-hover-color:   @spring-light-grey;
-@navbar-default-link-hover-bg:      @spring-green;
+@navbar-default-link-hover-bg:      #413126;
 @navbar-default-toggle-icon-bar-bg: @spring-light-grey;
 @navbar-default-toggle-hover-bg:    transparent;
-@navbar-default-link-active-bg:     @spring-deep-red;
+@navbar-default-link-active-bg:     #50423d;
 
 @border-radius-base:             0;
 @border-radius-large:            0;
@@ -39,7 +39,7 @@
 
 @btn-default-color:              @spring-light-grey;
 @btn-default-bg:                 @spring-brown;
-@btn-default-border:             @spring-green;
+@btn-default-border:             #8d7361;
 
 @nav-tabs-active-link-hover-color:        @spring-light-grey;
 @nav-tabs-active-link-hover-bg:           @spring-brown;
@@ -47,7 +47,7 @@
 @nav-tabs-border-color:                   @spring-brown;
 
 @pagination-active-bg:                    @spring-brown;
-@pagination-active-border:                @spring-green;
+@pagination-active-border:                #c9bbae;
 @table-border-color:                      @spring-brown;
 
 .table > thead > tr > th {
@@ -126,7 +126,7 @@ h1 {
 }
 
 .splash {
-  background: @spring-green;
+  background: #866558;
   color: @spring-brown;
   display: none;
 }
