--- a/src/main/webapp/resources/less/header.less
+++ b/src/main/webapp/resources/less/header.less
@@ -33,7 +33,7 @@
 }
 
 .navbar li > a, .navbar-text {
-  font-family: "montserratregular", sans-serif;
+  font-family: "skud-webfont", "wg_statik", "montserratregular", sans-serif;
   text-shadow: none;
   font-size: 14px;
 
