--- a/src/main/webapp/resources/less/typography.less
+++ b/src/main/webapp/resources/less/typography.less
@@ -10,6 +10,44 @@
   font-style: normal;
 }
 
+
+@font-face {
+	font-family: 'wg_font_skratched';
+	
+	src: url('../fonts/wg_font_skratched.eot');
+	src: url('../fonts/wg_font_skratched.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/wg_font_skratched.woff') format('woff'),
+		url('../fonts/wg_font_skratched.ttf') format('truetype'),
+		url('../fonts/wg_font_skratched.svg#wg_font_skratched') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'skud-webfont';
+	
+	src: url('../fonts/skud-webfont.eot');
+	src: url('../fonts/skud-webfont.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/skud-webfont.woff') format('woff'),
+		url('../fonts/skud-webfont.ttf') format('truetype'),
+		url('../fonts/skud-webfont.svg#skud-webfont') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'wg_statik';
+	
+	src: url('../fonts/wg_statik.eot');
+	src: url('../fonts/wg_statik.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/wg_statik.woff') format('woff'),
+		url('../fonts/wg_statik.ttf') format('truetype'),
+		url('../fonts/wg_statik.svg#wg_statik') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+ 
+
 @font-face {
   font-family: 'montserratregular';
   src: url('../fonts/montserrat-webfont.eot');
@@ -24,14 +62,14 @@
 body, h1, h2, h3, p, input {
   margin: 0;
   font-weight: 400;
-  font-family: "varela_roundregular", sans-serif;
+  font-family: Arial, sans-serif, "varela_roundregular";
   color: #34302d;
 }
 
 h1 {
   font-size: 24px;
   line-height: 30px;
-  font-family: "montserratregular", sans-serif;
+  font-family: "wg_font_skratched", "montserratregular", sans-serif;
 }
 
 h2 {
@@ -39,7 +77,7 @@ h2 {
   font-weight: 700;
   line-height: 24px;
   margin-bottom: 10px;
-  font-family: "montserratregular", sans-serif;
+  font-family: "wg_font_skratched", "montserratregular", sans-serif;
 }
 
 h3 {
@@ -56,5 +94,5 @@ p {
 
 strong {
   font-weight: 700;
-  font-family: "montserratregular", sans-serif;
+  font-family: "wg_font_skratched", "montserratregular", sans-serif;
 }
